--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Title</title>
+		<title>Cryptoanalysis</title>
 		<meta charset="UTF-8">
 		
 		<!-- CSS -->
@@ -26,7 +26,12 @@
 	</head>
 	<body>
 		<div id = "wrapper">
-		
+		    <div id = "flex_nav">
+		        <input type = "button" onclick = "window.location = 'pages/encrypt.html'" value = "ENCRYPT"/>
+		        <input type = "button" onclick = "window.location = 'pages/decrypt.html'" value = "DECRYPT"/>
+		        <input type = "button" onclick = "window.location = 'pages/lists.html'" value = "LISTS"/>
+		        <input type = "button" onclick = "window.location = 'pages/data.html'" value = "DATA"/>
+		    </div>
 		</div>
 	</body>
 </html>
