Add cryptojs includes (not working)
+ Fix main nav links

--- a/index.htm
+++ b/index.htm
@@ -27,10 +27,10 @@
 	<body>
 		<div id = "wrapper">
 		    <div id = "flex_nav">
-		        <input type = "button" onclick = "window.location = 'pages/encrypt.html'" value = "ENCRYPT"/>
-		        <input type = "button" onclick = "window.location = 'pages/decrypt.html'" value = "DECRYPT"/>
-		        <input type = "button" onclick = "window.location = 'pages/lists.html'" value = "LISTS"/>
-		        <input type = "button" onclick = "window.location = 'pages/data.html'" value = "DATA"/>
+		        <input type = "button" onclick = "window.location = 'page/encrypt.html'" value = "ENCRYPT"/>
+		        <input type = "button" onclick = "window.location = 'page/decrypt.html'" value = "DECRYPT"/>
+		        <input type = "button" onclick = "window.location = 'page/lists.html'" value = "LISTS"/>
+		        <input type = "button" onclick = "window.location = 'page/data.html'" value = "DATA"/>
 		    </div>
 		</div>
 	</body>
